tests/paczka2/big_fuzzy/38025804.err
Error in line 4: 3JYtHW5zCs S478 15,7
Error in line 6: fav7APxt S831 29,5
Error in line 7: 3JYtHW5zCs A882 42,6
Error in line 19: 3JYtHW5zCs S478 28,1
Error in line 28: T0VzEh S831 86,1
Error in line 26: 3JYtHW5zCs S831 82,5
Error in line 35: 3JYtHW5zCs A890 67,2
Error in line 42: T0VzEh A882 92,9
Error in line 58: 3JYtHW5zCs A882 00,7
Error in line 77: 3JYtHW5zCs A890 58,44
Error in line 73: 3NdZjqc A882 1,6
Error in line 80: mHZm2 A890 45,9
Error in line 85: fav7APxt S831 157,4
Error in line 78: 3JYtHW5zCs S831 24,3
Error in line 97: 3JYtHW5zCs A882 12,2
Error in line 98: 3JYtHW5zCs A890 34,8
Error in line 87: T0VzEh S478 38,7
Error in line 105: mHZm2 S478 88,9
Error in line 111: 3JYtHW5zCs S478 70,0
Error in line 124: 3NdZjqc S831 109,71
Error in line 115: T0VzEh S831 1,4
Error in line 128: S478 S831 45,9
Error in line 137: 3JYtHW5zCs A882 75,1
Error in line 142: 3JYtHW5zCs A890 3,0
Error in line 116: 3NdZjqc S831 38,0
Error in line 147: 3NdZjqc S478 65,6
Error in line 154: fPEwoy0Ls A882 14,6
Error in line 153: mHZm2 S831 31,1
Error in line 155: fPEwoy0Ls S478 84,3
Error in line 179: fav7APxt S831 88,1
Error in line 184: 3JYtHW5zCs S831 14,5
Error in line 190: 3JYtHW5zCs S478 61,7
Error in line 218: 3NdZjqc A882 82,5
Error in line 219: 3NdZjqc S478 56,2
Error in line 220: 3NdZjqc A882 0,5
Error in line 229: S478 A890 64,4
Error in line 225: mHZm2 S831 45,3
Error in line 232: fPEwoy0Ls A882 88,7
Error in line 244: 3JYtHW5zCs A¢90 34,1
Error in line 249: T0VzEh A890 66,83
